Editted a lot. No more hard code. Thank you Mr Tuan VM.I learned a lot from you! Anything else to check?

--- a/web/css/Home.css
+++ b/web/css/Home.css
@@ -37,3 +37,8 @@ input[type="text"], input[type="password"] {
     width: 250px;
     height: 21px;
 }
+span .error{
+    font-size: 20px;
+    font-style: italic;
+    color: tomato;
+}
