--- a/web/css/Home.css
+++ b/web/css/Home.css
@@ -1,27 +1,30 @@
 .wrapper {
+    margin-left: 20%;
     background-color: white;
-    margin: auto;
-    width: 90%;
-    height: 90vh;
-    font-family: Helvetica;
-    font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
+    width: 51.9%;
+    height: 100%;
+    font-family: "Helvetica";
+    min-height: 600px;
+}
+html, body {
+    width: 100%;
+    height: 100%;
 }
 .top {
+    margin-left: 20%;
     margin-top: 40px;
-    height: 30px;
+    height: 19px;
     background-image: url(../images/top_box.gif);
-    background-size: 90% auto;
-    background-position: center;
     background-repeat: no-repeat;
 }
 .lblLogin {
     color: #000088;
-    font-size: 28px;
+    font-size: 20px;
     font-weight: bold;
 }
 td, .aResgister {
     color: #416271;
-    font-size: 20px;
+    font-size: 18px;
 }
 .aResgister {
     text-decoration: none;
@@ -31,14 +34,14 @@ td, .aResgister {
     width: 90%;
 }
 .btnLogin {
-    font-size: 22px;
+    font-size: 18px;
 }
 input[type="text"], input[type="password"] {
     width: 250px;
     height: 21px;
 }
-span .error{
-    font-size: 20px;
+.error{
+    font-size: 17px;
     font-style: italic;
     color: tomato;
 }
