--- a/web/css/ManageQuiz.css
+++ b/web/css/ManageQuiz.css
@@ -8,10 +8,11 @@ span {
     color: #1017ff;
 }
 .main {
-    height: 100vh;
+    height: 100%;
 }
 
 .footer {
+    margin-top: 30px;
     height: 20px;
     margin-left: auto;
     margin-right: auto;
@@ -25,8 +26,4 @@ span {
 }
 .footer *:not(.currentPage) {
     color: #0000ff;
-}
-.wrapper {
-    min-height: 100vh;
-    height: 100%;
 }
